testsuite/tests/grammar/invalid_error_node/test_nonnull_inherited_field/test.lkt
from common import FooNode, Example

@abstract class BaseErrorDecl : FooNode {
    @parse_field f: Example
}

class ErrorDecl : BaseErrorDecl implements ErrorNode {
}
